--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="main">
       <div>
-        <img src="/../imagens/bg.png" alt="Atelie Regina Heitor" />
+        <img src="/../imagens/bg.jpg" alt="Atelie Regina Heitor" />
       </div>
       <section>
         <div class="btn">
