--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
     <title>Regina Heitor</title>
   </head>
   <body>
     <main class="main">
       <div>
-        <img src="/../imagens/bg.jpg" alt="Atelie Regina Heitor" />
+        <img src="public/imagens/bg.jpg" alt="Atelie Regina Heitor" />
       </div>
       <section>
         <div class="btn">
@@ -17,26 +17,30 @@
             href="https://www.youtube.com/c/Ateli%C3%AAR%C3%AAHeitor"
             target="_blank"
           >
-            <img src="/../imagens/btn_youtube.png" alt="" class="btn-youtube" />
+            <img
+              src="public/imagens/btn_youtube.png"
+              alt=""
+              class="btn-youtube"
+            />
           </a>
 
           <a href="https://www.facebook.com/AtelieReHeitor" target="_blank">
-            <img src="/../imagens/btn_face.png" alt="" class="btn-face" />
+            <img src="public/imagens/btn_face.png" alt="" class="btn-face" />
           </a>
 
           <a href="https://www.instagram.com/reginaheitor/" target="_blank">
-            <img src="/../imagens/btn_insta.png" alt="" class="btn-insta" />
+            <img src="public/imagens/btn_insta.png" alt="" class="btn-insta" />
           </a>
 
           <a
             href="https://api.whatsapp.com/send?phone=+553587062346"
             target="_blank"
           >
-            <img src="/../imagens/btn_whats.png" alt="" class="btn-whats" />
+            <img src="public/imagens/btn_whats.png" alt="" class="btn-whats" />
           </a>
 
           <a href="http://www.babyquilt.com.br/" target="_blank">
-            <img src="/../imagens/btn_store.png" alt="" class="btn-store" />
+            <img src="public/imagens/btn_store.png" alt="" class="btn-store" />
           </a>
         </div>
       </section>
