--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="main">
       <div>
-        <img src="public/imagens/bg.jpg" alt="Atelie Regina Heitor" />
+        <img src="public/imagens/bg1.jpg" alt="Atelie Regina Heitor" />
       </div>
       <section>
         <div class="btn">
@@ -17,30 +17,30 @@
             href="https://www.youtube.com/c/Ateli%C3%AAR%C3%AAHeitor"
             target="_blank"
           >
-            <img
+            <!-- <img
               src="public/imagens/btn_youtube.png"
               alt=""
               class="btn-youtube"
-            />
+            /> -->
           </a>
 
           <a href="https://www.facebook.com/AtelieReHeitor" target="_blank">
-            <img src="public/imagens/btn_face.png" alt="" class="btn-face" />
+            <!-- <img src="public/imagens/btn_face.png" alt="" class="btn-face" /> -->
           </a>
 
           <a href="https://www.instagram.com/reginaheitor/" target="_blank">
-            <img src="public/imagens/btn_insta.png" alt="" class="btn-insta" />
+            <!-- <img src="public/imagens/btn_insta.png" alt="" class="btn-insta" /> -->
           </a>
 
           <a
             href="https://api.whatsapp.com/send?phone=+553587062346"
             target="_blank"
           >
-            <img src="public/imagens/btn_whats.png" alt="" class="btn-whats" />
+            <!-- <img src="public/imagens/btn_whats.png" alt="" class="btn-whats" /> -->
           </a>
 
           <a href="http://www.babyquilt.com.br/" target="_blank">
-            <img src="public/imagens/btn_store.png" alt="" class="btn-store" />
+            <!-- <img src="public/imagens/btn_store.png" alt="" class="btn-store" /> -->
           </a>
         </div>
       </section>
